--- a/lambdas/authentication/serverless.yml
+++ b/lambdas/authentication/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-authentication
@@ -23,15 +23,15 @@ provider:
         buildArgs:
   environment:
     ENVIRONMENT: ${self:provider.stage}
+    GITHUB_CLIENT_ID: ${ssm:/secrets/${self:provider.stage}/github_client_id}
+    GITHUB_CLIENT_SECRET: ${ssm:/secrets/${self:provider.stage}/github_client_secret}
+    GITHUB_FERNET_KEY: ${ssm:/secrets/${self:provider.stage}/github_fernet_key}
     JWT_SECRET_KEY: ${ssm:/secrets/${self:provider.stage}/jwt_secret_key}
     POSTGRES_HOST: ${ssm:/terraform/${self:provider.stage}/rds/endpoint}
     POSTGRES_PORT: ${ssm:/terraform/${self:provider.stage}/rds/port}
     POSTGRES_DB: ${ssm:/terraform/${self:provider.stage}/rds/db_name}
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
-    GITHUB_CLIENT_ID: ${ssm:/secrets/${self:provider.stage}/github_client_id}
-    GITHUB_CLIENT_SECRET: ${ssm:/secrets/${self:provider.stage}/github_client_secret}
-    GITHUB_FERNET_KEY: ${ssm:/secrets/${self:provider.stage}/github_fernet_key}
 
 functions:
   logout:
