--- a/lambdas/candidate/serverless.yml
+++ b/lambdas/candidate/serverless.yml
@@ -6,7 +6,7 @@ provider:
   name: aws
   runtime: python3.9
   architecture: arm64
-  stage: dev
+  stage: ${opt:stage, 'dev'}
   region: us-east-1
   deploymentBucket:
     name: ${self:provider.stage}-sls-candidate
@@ -55,7 +55,6 @@ functions:
             name: ${self:provider.stage}-candidate-add-authorizer
             arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
     timeout: 30
-
 
   retrieve:
     name: ${self:provider.stage}-candidate-retrieve
