--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -48,12 +48,12 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-        working-directory: lambdas/${{strategy.matrix.package}}
+        working-directory: lambdas/${{ strategy.matrix.package }}
 
       - name: Deploy
         uses: serverless/github-action@v3.2
         with:
-          args: deploy --stage staging
+          args: -c "cd ./lambdas/${{ strategy.matrix.package }} && serverless deploy --stage staging"
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
