--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -54,6 +54,7 @@ jobs:
         uses: serverless/github-action@v3.2
         with:
           args: -c "cd ./lambdas/${{ strategy.matrix.package }} && serverless deploy --stage staging"
+          entrypoint: /bin/sh
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
