--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -46,15 +46,16 @@ jobs:
           cache: npm
           node-version: 18
 
+      - name: Install Serverless
+        run: npm install -g serverless
+
       - name: Install Dependencies
         run: npm install
         working-directory: lambdas/${{ strategy.matrix.package }}
 
       - name: Deploy
-        uses: serverless/github-action@v3.2
-        with:
-          args: -c "cd ./lambdas/${{ strategy.matrix.package }} && serverless deploy --stage staging"
-          entrypoint: /bin/sh
+        run: sls deploy --stage staging
+        working-directory: lambdas/${{ strategy.matrix.package }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
