--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -13,25 +13,25 @@ on:
 
 jobs:
   lambdas:
-    name: Lambda Functions (${{matrix.label}})
+    name: Lambda Functions (${{ matrix.label }})
     strategy:
       matrix:
         include:
-          - package: "authentication"
+          - package: authentication
             label: Authentication
-          - package: "authorizer"
+          - package: authorizer
             label: Authorizer
-          - package: "candidate"
+          - package: candidate
             label: Candidate
-          - package: "checklist"
+          - package: checklist
             label: Checklist
-          - package: "company"
+          - package: company
             label: Company
-          - package: "position"
+          - package: position
             label: Position
-          - package: "question"
+          - package: question
             label: Question
-          - package: "test"
+          - package: test
             label: Test
     runs-on: ubuntu-latest
     environment: Staging
@@ -51,11 +51,11 @@ jobs:
 
       - name: Install Dependencies
         run: npm install
-        working-directory: lambdas/${{ strategy.matrix.package }}
+        working-directory: lambdas/${{ matrix.package }}
 
       - name: Deploy
         run: sls deploy --stage staging
-        working-directory: lambdas/${{ strategy.matrix.package }}
+        working-directory: lambdas/${{ matrix.package }}
         env:
           AWS_ACCESS_KEY_ID: ${{ secrets.AWS_ACCESS_KEY_ID }}
           AWS_SECRET_ACCESS_KEY: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
