--- a/lambdas/authorizer/serverless.yml
+++ b/lambdas/authorizer/serverless.yml
@@ -69,7 +69,7 @@ resources:
       Value:
         Ref: ApiGatewayAuthorizer
       Export:
-        Name: authorizerId
+        Name: sls-authorizer-${self:provider.stage}-AuthorizerId
 
 plugins:
   - serverless-deployment-bucket
