--- a/lambdas/candidate/serverless.yml
+++ b/lambdas/candidate/serverless.yml
@@ -30,6 +30,14 @@ provider:
     POSTGRES_USER: ${ssm:/terraform/${self:provider.stage}/rds/db_username}
     POSTGRES_PASSWORD: ${ssm:/terraform/${self:provider.stage}/rds/db_password}
 
+custom:
+  origins:
+    staging:
+      - "https://${ssm:/terraform/staging/domain_name}"
+      - "https://www.${ssm:/terraform/staging/domain_name}"
+    dev:
+      - "http://127.0.0.1:5173"
+
 functions:
   add:
     name: ${self:provider.stage}-candidate-add
@@ -42,17 +50,11 @@ functions:
           path: /candidates
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "http://127.0.0.1:5173"
+            origins: ${self:custom.origins.${self:provider.stage}}
             allowCredentials: true
           authorizer:
-            type: request
-            identitySource: method.request.header.Cookie
-            resultTtlInSeconds: 300
-            name: ${self:provider.stage}-candidate-add-authorizer
-            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
+            type: REQUEST
     timeout: 30
 
   retrieve:
@@ -66,17 +68,11 @@ functions:
           path: /candidates
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "http://127.0.0.1:5173"
+            origins: ${self:custom.origins.${self:provider.stage}}
             allowCredentials: true
           authorizer:
-            type: request
-            identitySource: method.request.header.Cookie
-            resultTtlInSeconds: 300
-            name: ${self:provider.stage}-candidate-retrieve-authorizer
-            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
+            type: REQUEST
     timeout: 30
 
   retrieve-result:
@@ -90,17 +86,11 @@ functions:
           path: /candidates/result/{candidate_result_id}
           method: GET
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "http://127.0.0.1:5173"
+            origins: ${self:custom.origins.${self:provider.stage}}
             allowCredentials: true
           authorizer:
-            type: request
-            identitySource: method.request.header.Cookie
-            resultTtlInSeconds: 300
-            name: ${self:provider.stage}-candidate-retrieve-result-authorizer
-            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
+            type: REQUEST
           request:
             parameters:
               paths:
@@ -118,17 +108,11 @@ functions:
           path: /candidates/evaluate
           method: POST
           cors:
-            origins:
-              - "https://${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "https://www.${ssm:/terraform/${self:provider.stage}/domain_name}"
-              - "http://127.0.0.1:5173"
+            origins: ${self:custom.origins.${self:provider.stage}}
             allowCredentials: true
           authorizer:
-            type: request
-            identitySource: method.request.header.Cookie
-            resultTtlInSeconds: 300
-            name: ${self:provider.stage}-candidate-evaluate-authorizer
-            arn: arn:aws:lambda:${aws:region}:${aws:accountId}:function:${self:provider.stage}-authorizer
+            authorizerId: ${cf:authorizer-${self:provider.stage}.AuthorizerId}
+            type: REQUEST
     timeout: 30
 
 plugins:
