--- a/lambdas/authorizer/serverless.yml
+++ b/lambdas/authorizer/serverless.yml
@@ -8,6 +8,9 @@ provider:
   architecture: arm64
   stage: ${opt:stage, 'dev'}
   region: us-east-1
+  apiGateway:
+    restApiId: ${ssm:/terraform/${self:provider.stage}/api_gateway/id}
+    restApiRootResourceId: ${ssm:/terraform/${self:provider.stage}/api_gateway/root_resource_id}
   deploymentBucket:
     name: ${self:provider.stage}-sls-authorizer
   iam:
@@ -34,6 +37,39 @@ functions:
       name: default
       command:
         - authorize.handler
+
+resources:
+  Parameters:
+    RestApiId:
+      Type: AWS::SSM::Parameter::Value<String>
+      Default: /terraform/${self:provider.stage}/api_gateway/id
+  Resources:
+    ApiGatewayAuthorizer:
+      Type: AWS::ApiGateway::Authorizer
+      Properties:
+        Name: ${self:provider.stage}-authorizer
+        RestApiId:
+          Ref: RestApiId
+        AuthorizerUri:
+          Fn::Join:
+            - ""
+            - - "arn:aws:apigateway:"
+              - Ref: AWS::Region
+              - ":lambda:path/2015-03-31/functions/"
+              - "arn:aws:lambda:"
+              - Ref: AWS::Region
+              - ":"
+              - Ref: AWS::AccountId
+              - ":function:${self:provider.stage}-authorizer"
+              - "/invocations"
+        Type: REQUEST
+        IdentitySource: method.request.header.Cookie
+  Outputs:
+    AuthorizerId:
+      Value:
+        Ref: ApiGatewayAuthorizer
+      Export:
+        Name: sls-authorizer-${self:provider.stage}-AuthorizerId
 
 plugins:
   - serverless-deployment-bucket
