--- a/.github/workflows/job-deploy-lambdas.yml
+++ b/.github/workflows/job-deploy-lambdas.yml
@@ -9,15 +9,78 @@ on:
         type: string
 
 jobs:
+  lambda-authentication:
+    name: Lambda Functions (Authentication)
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment-label }}
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 18
+
+      - name: Install Serverless
+        run: npm install -g serverless
+
+      - name: Install Dependencies
+        run: npm install
+        working-directory: lambdas/authentication
+
+      - name: Deploy
+        run: sls deploy --stage ${{ inputs.environment }}
+        working-directory: lambdas/authentication
+
+  lambda-authorizer:
+    name: Lambda Functions (Authorizer)
+    runs-on: ubuntu-latest
+    environment: ${{ inputs.environment-label }}
+    steps:
+      - name: Fetch Repository
+        uses: actions/checkout@v3
+        with:
+          fetch-depth: 0
+
+      - name: Configure AWS Credentials
+        uses: aws-actions/configure-aws-credentials@v2
+        with:
+          aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
+          aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
+          aws-region: us-east-1
+
+      - uses: actions/setup-node@v3
+        with:
+          cache: npm
+          node-version: 18
+
+      - name: Install Serverless
+        run: npm install -g serverless
+
+      - name: Install Dependencies
+        run: npm install
+        working-directory: lambdas/authorizer
+
+      - name: Deploy
+        run: sls deploy --stage ${{ inputs.environment }}
+        working-directory: lambdas/authorizer
+
   lambdas:
     name: Lambda Functions (${{ matrix.label }})
+    needs: [lambda-authorizer]
     strategy:
       matrix:
         include:
-          - package: authentication
-            label: Authentication
-          - package: authorizer
-            label: Authorizer
           - package: candidate
             label: Candidate
           - package: checklist
@@ -31,7 +94,7 @@ jobs:
           - package: test
             label: Test
     runs-on: ubuntu-latest
-    environment: Staging
+    environment: ${{ inputs.environment-label }}
     steps:
       - name: Fetch Repository
         uses: actions/checkout@v3
@@ -58,5 +121,5 @@ jobs:
         working-directory: lambdas/${{ matrix.package }}
 
       - name: Deploy
-        run: sls deploy --stage staging
+        run: sls deploy --stage ${{ inputs.environment }}
         working-directory: lambdas/${{ matrix.package }}
