--- a/.github/workflows/dispatch-deploy-infrastructure.yml
+++ b/.github/workflows/dispatch-deploy-infrastructure.yml
@@ -50,7 +50,7 @@ jobs:
     name: Deploy
     if: inputs.environment != 'production'
     uses: ./.github/workflows/job-deploy-infrastructure.yml
-    needs: [plan-environment]
+    needs: [deploy-shared, plan-environment]
     with:
       environment: ${{ inputs.environment }}
       environment-label: ${{ inputs.environment-label }}
