chore(ci): update inputs

--- a/.github/workflows/dispatch-deploy-infrastructure.yml
+++ b/.github/workflows/dispatch-deploy-infrastructure.yml
@@ -10,7 +10,7 @@ on:
       environment-label:
         description: "Environment to deploy to in capitalized."
         required: true
-        default: "staging"
+        default: "Staging"
 
 jobs:
   plan-shared:
