--- a/lambdas/authorizer/serverless.yml
+++ b/lambdas/authorizer/serverless.yml
@@ -64,6 +64,23 @@ resources:
               - "/invocations"
         Type: REQUEST
         IdentitySource: method.request.header.Cookie
+    LambdaInvokePermissionForAuthorizer:
+      Type: "AWS::Lambda::Permission"
+      Properties:
+        FunctionName:
+          Fn::Sub: arn:aws:lambda:${AWS::Region}:${AWS::AccountId}:function:${self:provider.stage}-authorizer
+        Action: "lambda:InvokeFunction"
+        Principal: "apigateway.amazonaws.com"
+        SourceArn:
+          Fn::Join:
+            - ""
+            - - "arn:aws:execute-api:"
+              - Ref: AWS::Region
+              - ":"
+              - Ref: AWS::AccountId
+              - ":"
+              - Ref: RestApiId
+              - "/*/*"
   Outputs:
     AuthorizerId:
       Value:
