--- a/.github/workflows/job-deploy-db-changelog.yml
+++ b/.github/workflows/job-deploy-db-changelog.yml
@@ -9,23 +9,15 @@ on:
         type: string
 
 jobs:
-  ssh-tunnel:
+  run:
+    name: DB Changelog
     runs-on: ubuntu-latest
-
+    environment: ${{ inputs.environment-label }}
     steps:
       - name: Check out code
         uses: actions/checkout@v2
 
-      - name: Check Files Changed
-        uses: dorny/paths-filter@v2
-        id: changes
-        with:
-          filters: |
-            package:
-              - 'db/**'
-
       - name: Configure AWS Credentials
-        if: steps.changes.outputs.package == 'true'
         uses: aws-actions/configure-aws-credentials@v2
         with:
           aws-access-key-id: ${{ secrets.AWS_ACCESS_KEY_ID }}
@@ -33,24 +25,20 @@ jobs:
           aws-region: us-east-1
 
       - name: Set up Python 3.8
-        if: steps.changes.outputs.package == 'true'
         uses: actions/setup-python@v2
         with:
           python-version: 3.8
 
       - name: Set up SSH tunnel
-        if: steps.changes.outputs.package == 'true'
         run: |
           make create-ssh-tunnel environment=${{ inputs.environment }}
 
       - name: Install dependencies
-        if: steps.changes.outputs.package == 'true'
         run: |
           pip install -r requirements.txt
         working-directory: db
 
       - name: Run Update Changelog
-        if: steps.changes.outputs.package == 'true'
         run: |
           python ./update.py staging
         working-directory: db/scripts
