--- a/.github/workflows/job-deploy-db-changelog.yml
+++ b/.github/workflows/job-deploy-db-changelog.yml
@@ -43,5 +43,6 @@ jobs:
       - name: Update Changelog
         run: |
           make create-ssh-tunnel environment=${{ inputs.environment }}
+          sleep 10
           python db/scripts/update.py staging
           make close-ssh-tunnel environment=${{ inputs.environment }}
